test: add failing test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=katapw
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+app.jwt.secret=secretNotForProductionMustBeChanged
+app.jwt.expiration=3600000
